mmlに少し対応

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,9 @@
         "./src/instruments/square.ts",
         "./src/instruments/triangle.ts",
         "./src/manager.ts",
+        "./src/note.ts",
         "./src/part.ts",
+        "./src/score.ts",
         "./src/typings/instrument.d.ts",
         "./src/typings/wave.d.ts",
         "./src/waves/sawtooth.ts",
